--- a/css/main.css
+++ b/css/main.css
@@ -11,3 +11,131 @@ div {
   padding: .5rem;
   text-align: center;
 }
+
+a {
+  text-decoration: none;
+  display: inline-block;
+}
+
+ .btn {
+  font-size: 1.125rem;
+  padding: .4em .75em;
+  border-radius: 8px;
+  background-color: #333;
+  color: #fff;
+}
+
+.btn:hover {
+  background-color: #000;
+}
+
+.btn-subtle {
+  padding: .4em .75em;
+  border-radius: 8px;
+  color: #fff;
+  background-color: #ccc;
+  font-size: 1.125rem;
+}
+
+.btn-subtle:hover {
+  background-color: #666;
+}
+
+.btn-ghost {
+  border-width: 3px;
+  padding: .4em .75em;
+  border-radius: 8px;
+  border: 3px solid #000;
+  font-size: 1.125rem;
+  color: #000;
+}
+
+.btn-ghost:hover {
+  background-color: #666;
+  border: 3px solid #666;
+  color: #fff;
+}
+
+.btn-warning {
+  padding: .4em .75em;
+  border-radius: 8px;
+  background-color: #f33;
+  color: #fff;
+  font-size: 1.125rem;
+}
+
+.btn-warning:hover {
+  background-color: #933;
+}
+
+.btn-small {
+  padding: .4em .75em;
+  border-radius: 8px;
+  background-color: #333;
+  color: #fff;
+  font-size: .875rem;
+}
+
+.btn-subtle-small {
+  padding: .4em .75em;
+  border-radius: 8px;
+  background-color: #ccc;
+  color: #fff;
+  font-size: .875rem;
+}
+
+.btn-ghost-small{
+  border-width: 3px;
+  padding: .4em .75em;
+  border-radius: 8px;
+  border: 3px solid #000;
+  color: #000;
+  font-size: .875rem;
+}
+
+.btn-ghost-small:hover {
+  background-color: #666;
+  border: 3px solid #666;
+  color: #fff;
+}
+
+.btn-warning-small{
+  padding: .4em .75em;
+  border-radius: 8px;
+  background-color: #f33;
+  color: #fff;
+  font-size: .875rem;
+}
+
+.btn-big{
+  padding: .4em .75em;
+  border-radius: 8px;
+  background-color: #333;
+  color: #fff;
+  font-size: 1.5rem;
+}
+
+.btn-subtle-big{
+  padding: .4em .75em;
+  border-radius: 8px;
+  font-size: 1.5rem;
+  background-color: #ccc;
+  color: #fff;
+}
+
+.btn-ghost-big{
+  border-width: 3px;
+  padding: .4em .75em;
+  border-radius: 8px;
+  border: 3px solid #000;
+  color: #000;
+  font-size: 1.5rem;
+}
+
+.btn-warning-big{
+  padding: .4em .75em;
+  border-radius: 8px;
+  font-size: 1.5rem;
+  background-color: #f33;
+  color: #fff;
+}
