--- a/css/main.css
+++ b/css/main.css
@@ -17,12 +17,13 @@ a {
   display: inline-block;
 }
 
- .btn {
+.btn {
   font-size: 1.125rem;
   padding: .4em .75em;
   border-radius: 8px;
   background-color: #333;
   color: #fff;
+  display: inline-block;
 }
 
 .btn:hover {
@@ -92,7 +93,7 @@ a {
   background-color: #666;
 }
 
-.btn-ghost-small{
+.btn-ghost-small {
   border-width: 3px;
   padding: .4em .75em;
   border-radius: 8px;
@@ -107,7 +108,7 @@ a {
   color: #fff;
 }
 
-.btn-warning-small{
+.btn-warning-small {
   padding: .4em .75em;
   border-radius: 8px;
   background-color: #f33;
@@ -119,7 +120,7 @@ a {
   background-color: #933;
 }
 
-.btn-big{
+.btn-big {
   padding: .4em .75em;
   border-radius: 8px;
   background-color: #333;
@@ -131,7 +132,7 @@ a {
   background-color: #000;
 }
 
-.btn-subtle-big{
+.btn-subtle-big {
   padding: .4em .75em;
   border-radius: 8px;
   font-size: 1.5rem;
@@ -143,7 +144,7 @@ a {
   background-color: #666;
 }
 
-.btn-ghost-big{
+.btn-ghost-big {
   border-width: 3px;
   padding: .4em .75em;
   border-radius: 8px;
@@ -158,7 +159,7 @@ a {
   color: #fff;
 }
 
-.btn-warning-big{
+.btn-warning-big {
   padding: .4em .75em;
   border-radius: 8px;
   font-size: 1.5rem;
