--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ div {
   background-color: #000;
 }
 
-.btn .subtle {
+.btn-subtle {
   padding: .4em .75em;
   border-radius: 8px;
   color: #fff;
@@ -36,11 +36,11 @@ div {
   text-decoration: none;
 }
 
-.subtle:hover {
+.btn-subtle:hover {
   background-color: #666;
 }
 
-.btn .ghost {
+.btn-ghost {
   border-width: 3px;
   padding: .4em .75em;
   border-radius: 8px;
@@ -51,13 +51,13 @@ div {
   text-decoration: none;
 }
 
-.ghost:hover {
+.btn-ghost:hover {
   background-color: #666;
   border: 3px solid #666;
   color: #fff;
 }
 
-.btn .warning {
+.btn-warning {
   padding: .4em .75em;
   border-radius: 8px;
   background-color: #f33;
@@ -67,11 +67,11 @@ div {
   text-decoration: none;
 }
 
-.warning:hover {
+.btn-warning:hover {
   background-color: #933;
 }
 
-.smallbtn {
+.btn-small {
   padding: .4em .75em;
   border-radius: 8px;
   background-color: #333;
@@ -81,11 +81,11 @@ div {
   text-decoration: none;
 }
 
-.smallbtn:hover {
+.btn-small:hover {
   background-color: #000;
 }
 
-.smallbtn + .subtle {
+.btn-subtle-small {
   padding: .4em .75em;
   border-radius: 8px;
   background-color: #ccc;
@@ -95,11 +95,11 @@ div {
   text-decoration: none;
 }
 
-.smallbtn + .subtle:hover {
+.btn-subtle-small:hover {
   background-color: #666;
 }
 
-.smallbtn .ghost {
+.btn-ghost-small {
   border-width: 3px;
   padding: .4em .75em;
   border-radius: 8px;
@@ -110,7 +110,13 @@ div {
   text-decoration: none;
 }
 
-.smallbtn .warning {
+.btn-ghost-small:hover {
+  background-color: #666;
+  border: 3px solid #666;
+  color: #fff;
+}
+
+.btn-warning-small {
   padding: .4em .75em;
   border-radius: 8px;
   background-color: #f33;
@@ -120,7 +126,11 @@ div {
   text-decoration: none;
 }
 
-.bigbtn {
+.btn-warning-small:hover {
+  background-color: #933;
+}
+
+.btn-big {
   padding: .4em .75em;
   border-radius: 8px;
   background-color: #333;
@@ -130,11 +140,11 @@ div {
   text-decoration: none;
 }
 
-.bigbtn:hover {
+.btn-big:hover {
   background-color: #000;
 }
 
-.bigbtn .subtle {
+.btn-subtle-big {
   padding: .4em .75em;
   border-radius: 8px;
   font-size: 1.5rem;
@@ -144,7 +154,11 @@ div {
   text-decoration: none;
 }
 
-.bigbtn .ghost {
+.btn-subtle-big:hover {
+  background-color: #666;
+}
+
+.btn-ghost-big {
   border-width: 3px;
   padding: .4em .75em;
   border-radius: 8px;
@@ -155,7 +169,13 @@ div {
   text-decoration: none;
 }
 
-.bigbtn .warning {
+.btn-ghost-big:hover {
+  background-color: #666;
+  border: 3px solid #666;
+  color: #fff;
+}
+
+.btn-warning-big {
   padding: .4em .75em;
   border-radius: 8px;
   font-size: 1.5rem;
@@ -163,4 +183,8 @@ div {
   color: #fff;
   display: inline-block;
   text-decoration: none;
+}
+
+.btn-warning-big:hover {
+  background-color: #933;
 }
