--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ div {
   background-color: #000;
 }
 
-.btn-subtle.btn {
+.btn-subtle {
   color: #fff;
   background-color: #ccc;
 }
@@ -35,7 +35,7 @@ div {
   background-color: #666;
 }
 
-.btn-ghost.btn {
+.btn-ghost {
   border-width: 3px;
   color: #000;
   border: 3px solid #000;
