--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ div {
   background-color: #666;
 }
 
-.btn-ghost.ghost {
+.btn-ghost {
   border-width: 3px;
   color: #000;
   background-color: #fff;
@@ -44,6 +44,7 @@ div {
 .ghost {
   border: 3px solid #000;
 }
+
 .btn-ghost:hover {
   background-color: #666;
   border: 3px solid #666;
