--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ div {
 
 .btn {
   font-size: 1.125rem;
-  padding: .75em;
+  padding: .4em .75em;
   border-radius: 8px;
   background-color: #333;
   color: #fff;
